2024-06-01T01:01:48Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9326263418 # 313
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-01
* notice: last 14d: unq all: 1 19
* notice: prev accum: outdated-unq outdated-all / unq all: 107 415 / 108 418
* notice: next accum: outdated-unq outdated-all / unq all: 108 418 / 109 437
* notice: prev exec diff / last date diff / accum: unq all: +1 +19 -0 -0 / +1 +19 -0 -0 / 1 19
* notice: removed / changed dates: [2024-05-01] / [2024-05-31]

2024-05-10T16:14:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9035034568 # 260
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-10
* notice: last 14d: unq all: 1 3
* notice: prev accum: outdated-unq outdated-all / unq all: 106 414 / 108 418
* notice: next accum: outdated-unq outdated-all / unq all: 107 415 / 108 418
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-04-26] / []

2024-05-08T00:43:20Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8994357869 # 252
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-08
* notice: last 14d: unq all: 2 4
* notice: prev accum: outdated-unq outdated-all / unq all: 105 413 / 108 418
* notice: next accum: outdated-unq outdated-all / unq all: 106 414 / 108 418
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-04-23] / []

2024-05-01T16:14:25Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8911851685 # 233