@@ -1,11 +1,16 @@
 {
-  "count": 19,
-  "uniques": 1,
+  "count": 38,
+  "uniques": 3,
   "views": [
     {
       "timestamp": "2024-05-31T00:00:00Z",
       "count": 19,
       "uniques": 1
+    },
+    {
+      "timestamp": "2024-06-11T00:00:00Z",
+      "count": 19,
+      "uniques": 2
     }
   ]
 }
