@@ -1,3 +1,12 @@
+2024-06-12T01:00:01Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9474950803 # 324
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-12
+* notice: last 14d: unq all: 3 38
+* notice: prev accum: outdated-unq outdated-all / unq all: 108 418 / 109 437
+* notice: next accum: outdated-unq outdated-all / unq all: 108 418 / 111 456
+* notice: prev exec diff / last date diff / accum: unq all: +2 +19 -0 -0 / +2 +19 -0 -0 / 2 19
+* notice: removed / changed dates: [] / [2024-06-11]
+
 2024-06-01T01:01:48Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9326263418 # 313
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-01
